Updated social media links, fixed spacing in contact us.

--- a/css/custom.css
+++ b/css/custom.css
@@ -64,3 +64,9 @@ body {
   background-size: cover;
   -o-background-size: cover;
 }
+
+.social-media-icon {
+	padding-left: 10px;
+    padding-right: 10px;
+    height: 35px;
+}
